catkin_ws/logs/backend/build.make.004.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:271:7: error: expected ‘)’ before numeric constant
       0,0,1,0,
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:270:7: error: no match for ‘operator=’ (operand types are ‘Eigen::Matrix4f {aka Eigen::Matrix<float, 4, 4>}’ and ‘Eigen::CommaInitializer<Eigen::Matrix<float, 4, 4> >’)
   rot = (Eigen::Matrix4f() << 0,1,0,0
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:270:7: note: candidates are:
In file included from /usr/include/eigen3/Eigen/Core:294:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IPoseGraph.h:11,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:14,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:14:
/usr/include/eigen3/Eigen/src/Core/Matrix.h:154:33: note: Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>& Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::operator=(const Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>&) [with _Scalar = float; int _Rows = 4; int _Cols = 4; int _Options = 0; int _MaxRows = 4; int _MaxCols = 4]
     EIGEN_STRONG_INLINE Matrix& operator=(const Matrix& other)
                                 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:154:33: note:   no known conversion for argument 1 from ‘Eigen::CommaInitializer<Eigen::Matrix<float, 4, 4> >’ to ‘const Eigen::Matrix<float, 4, 4>&’
/usr/include/eigen3/Eigen/src/Core/Matrix.h:170:33: note: template<class OtherDerived> Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>& Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::operator=(const Eigen::MatrixBase<OtherDerived>&) [with OtherDerived = OtherDerived; _Scalar = float; int _Rows = 4; int _Cols = 4; int _Options = 0; int _MaxRows = 4; int _MaxCols = 4]
     EIGEN_STRONG_INLINE Matrix& operator=(const MatrixBase<OtherDerived>& other)
                                 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:170:33: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:270:7: note:   ‘Eigen::CommaInitializer<Eigen::Matrix<float, 4, 4> >’ is not derived from ‘const Eigen::MatrixBase<Derived>’
   rot = (Eigen::Matrix4f() << 0,1,0,0
       ^
In file included from /usr/include/eigen3/Eigen/Core:294:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IPoseGraph.h:11,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:14,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:14:
/usr/include/eigen3/Eigen/src/Core/Matrix.h:182:33: note: template<class OtherDerived> Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>& Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::operator=(const Eigen::EigenBase<OtherDerived>&) [with OtherDerived = OtherDerived; _Scalar = float; int _Rows = 4; int _Cols = 4; int _Options = 0; int _MaxRows = 4; int _MaxCols = 4]
     EIGEN_STRONG_INLINE Matrix& operator=(const EigenBase<OtherDerived> &other)
                                 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:182:33: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:270:7: note:   ‘Eigen::CommaInitializer<Eigen::Matrix<float, 4, 4> >’ is not derived from ‘const Eigen::EigenBase<Derived>’
   rot = (Eigen::Matrix4f() << 0,1,0,0
       ^
In file included from /usr/include/eigen3/Eigen/Core:294:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IPoseGraph.h:11,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:14,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:14:
/usr/include/eigen3/Eigen/src/Core/Matrix.h:188:33: note: template<class OtherDerived> Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>& Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::operator=(const Eigen::ReturnByValue<OtherDerived>&) [with OtherDerived = OtherDerived; _Scalar = float; int _Rows = 4; int _Cols = 4; int _Options = 0; int _MaxRows = 4; int _MaxCols = 4]
     EIGEN_STRONG_INLINE Matrix& operator=(const ReturnByValue<OtherDerived>& func)
                                 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:188:33: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:270:7: note:   ‘Eigen::CommaInitializer<Eigen::Matrix<float, 4, 4> >’ is not derived from ‘const Eigen::ReturnByValue<Derived>’
   rot = (Eigen::Matrix4f() << 0,1,0,0
       ^
In file included from /usr/include/eigen3/Eigen/Core:294:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IPoseGraph.h:11,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:14,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:14:
/usr/include/eigen3/Eigen/src/Core/Matrix.h:329:13: note: template<class OtherDerived> Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>& Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::operator=(const Eigen::RotationBase<OtherDerived, ColsAtCompileTime>&) [with OtherDerived = OtherDerived; _Scalar = float; int _Rows = 4; int _Cols = 4; int _Options = 0; int _MaxRows = 4; int _MaxCols = 4]
     Matrix& operator=(const RotationBase<OtherDerived,ColsAtCompileTime>& r);
             ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:329:13: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:270:7: note:   ‘Eigen::CommaInitializer<Eigen::Matrix<float, 4, 4> >’ is not derived from ‘const Eigen::RotationBase<OtherDerived, 4>’
   rot = (Eigen::Matrix4f() << 0,1,0,0
       ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
